src/test/deca/syntax/valid/testClassExtension.deca
// Test extend a class
// Result : OK

class A extends B{
    // A extends the super class B
}
