src/test/deca/syntax/invalid/testExtend1.deca
// test Invalid extend
// Result : Error
// Empty extends : missing IDENT at '{'
class C extends {

}
